# Tombot

./: CHANGELOG  Config.example.hs  Config.json  Main.hs  README.md  Tombot.cabal  help  stack.yaml
Tombot/: .Bot.hs.swp  .Discord.hs.swp  .Funcs.hs.swp  .IRC.hs.swp  .Parser.hs.swp  .Types.hs.swp  .Utils.hs.swp  Bot.hs  Config.hs  Connection.hs  Discord.hi  Discord.hs  Discourse.hs  Errors.hs  Funcs.hs  Hub.hs  IRC.hs  Net.hs  Parser.hs  Rate.hs  Types.hs  Utils.hs
Tombot/Discord/: Actions.hs  Types.hs
Tombot/IRC/: Net.hs  Types.hs
Tombot/Parser/: Bot.hs
