
Name:               Tombot
Version:            0.2.0
Synopsis:           The Haskell IRC bot that composes functions.
Author:             Shou
Maintainer:         x@shou.io
Copyright:          Shou
License:            GPL-2
License-File:       LICENSE
Cabal-Version:      >= 1.2
Build-Type:         Simple

Executable tombot
    GHC-Options:
        -threaded
    Build-Depends:
        aeson,
        attoparsec,
        bytestring,
        base,
        case-insensitive,
        containers,
        directory,
        either,
        errors,
        hashmap,
        hint,
        HTTP,
        http-types,
        json,
        lens,
        mtl,
        network,
        old-locale,
        process,
        random,
        regex-compat,
        stm,
        text,
        time,
        utf8-string,
        websockets,
        wreq,
        wuss,
        xml
    Main-Is:
        Main.hs

-- Library
--     Exposed-Modules:
--         Tombot.Bot
--         Tombot.Funcs
--         Tombot.IRC
--         Tombot.Net
--         Tombot.Parser
--         Tombot.Utils
--         Tombot.Types

