
Name:               Tombot
Version:            0.3.0
Synopsis:           Chatbot with its own interpreted composable language.
Author:             Shou
Maintainer:         x@shou.io
Copyright:          Shou
License:            GPL-2
License-File:       LICENSE
Cabal-Version:      >= 1.2
Build-Type:         Simple

Executable tombot
    GHC-Options:
        -threaded
        -fwarn-name-shadowing
    Build-Depends:
        aeson,
        attoparsec,
        bifunctors,
        boolean-like,
        bytestring,
        base,
        case-insensitive,
        containers,
        data-default,
        direct-sqlite,
        directory,
        errors,
        filepath,
        lens,
        lens-aeson,
        hashable,
        HTTP,
        http-types,
        mtl,
        network,
        old-locale,
        optparse-applicative,
        process,
        random,
        regex-compat,
        sqlite-simple,
        stm,
        taggy,
        taggy-lens,
        text,
        time,
        type-operators,
        unordered-containers,
        utf8-string,
        vector,
        websockets,
        wreq,
        wuss
    Main-Is:
        Main.hs

-- Library
--     Exposed-Modules:
--         Tombot.Bot
--         Tombot.Funcs
--         Tombot.IRC
--         Tombot.Net
--         Tombot.Parser
--         Tombot.Utils
--         Tombot.Types

